CHanges merged from master

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -4,7 +4,10 @@
 	<h1 class="center-content font-light">What the hack</h1>
 	<div class="separator15"></div>
 	<p class=" line-compress center-content color-white">
-		{{config.appName}} is a css helper containing few important css rules
+		{{config.appName}}  is a css helper, forget the traditional frameworks approach.
+		<div>
+			Each class is a task-like.
+		</div>
 	</p>
 	<div class="separator15"></div>
 	<div class="separator50"></div>
@@ -16,7 +19,7 @@
 	<h1 class="center-content font-light">Why the hack</h1>
 	<div class="separator15"></div>
 	<p class="line-compress center-content color-muted">
-		Cause its lightweight and contains magical unicorns
+		Because it is lightweight, easy and new.
 	</p>
 	<div class="separator15"></div>
 	<div class="separator50"></div>
@@ -28,7 +31,7 @@
 	<h1 class="center-content font-light">How the hack</h1>
 	<div class="separator15"></div>
 	<p class="line-compress center-content color-muted">
-		Downloading it, installing it, trying it
+		Downloading it, installing it, trying it.
 	</p>
 	<div class="separator15"></div>
 	<div class="separator50"></div>
@@ -53,4 +56,3 @@
 	</div>
 </div>
 <div class="separator50"></div>
-
