Changes to run the doc locally

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -5,7 +5,7 @@
 	<div class="separator15"></div>
 	<p class=" line-compress center-content color-white">
 		{{config.appName}}  is a css helper, forget the traditional frameworks approach.
-		<div>
+		<div class="center-content">
 			Each class is a task-like.
 		</div>
 	</p>
@@ -56,4 +56,3 @@
 	</div>
 </div>
 <div class="separator50"></div>
-
