--- a/views/modules/nav/nav.html
+++ b/views/modules/nav/nav.html
@@ -53,6 +53,13 @@
         <span class="col7 left-content"> Animations</span>
     </a>
     <div class="separator15"></div>
+    <a href="#/components" class="line btn btn-medium bg-muted border radius3 color-white" ng-class="{'toggle-opacity-hover': config.appPath.indexOf('components') < 0 , 'active' : config.appPath.indexOf('components') > -1}">
+        <span class="col3">
+            <i class="fa fa-cube color-red"></i>
+        </span>
+        <span class="col7 left-content"> Components</span>
+    </a>
+    <div class="separator15"></div>
     <a href="#/responsive" class="line btn btn-medium bg-muted border radius3 color-white" ng-class="{'toggle-opacity-hover': config.appPath.indexOf('responsive') < 0 , 'active' : config.appPath.indexOf('responsive') > -1}">
         <span class="col3">
             <i class="fa fa-tablet color-red"></i>
