Added .middle util class

--- a/views/utils/index.html
+++ b/views/utils/index.html
@@ -220,6 +220,12 @@
       <div class="line-compress bg-lightgrey color-muted radius3">
         It appends right:0; to the element
       </div>
+       <div class="separator5"></div>
+      <h3>.middle</h3>
+      <div class="separator5"></div>
+      <div class="line-compress bg-lightgrey color-muted radius3">
+        It appends left:0; and right:0; to the element
+      </div>
 
       <div class="separator30"></div>
       <h1 class="color-muted font-light">Statements</h1>
