Home page NB infos

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -1,58 +1,71 @@
 <div class="line bg-red color-white">
-	<div class="separator15"></div>
-	<div class="separator50"></div>
-	<h1 class="center-content font-light">What the hack</h1>
-	<div class="separator15"></div>
-	<p class=" line-compress center-content color-white">
-		{{config.appName}}  is a css helper, forget the traditional frameworks approach.
-		<div class="center-content">
-			Each class is a task-like.
-		</div>
-	</p>
-	<div class="separator15"></div>
-	<div class="separator50"></div>
-	<div class="hr"></div>
+  <div class="separator15"></div>
+  <div class="separator50"></div>
+  <h1 class="center-content font-light">What the hack</h1>
+  <div class="separator15"></div>
+  <p class=" line-compress center-content color-white">
+    {{config.appName}}  is a css helper, forget the traditional frameworks approach.
+    <div class="center-content">
+      Each class is a task-like.
+    </div>
+  </p>
+  <div class="separator15"></div>
+  <div class="separator50"></div>
+  <div class="hr"></div>
 </div>
 <div class="line bg-azure color-grey">
-	<div class="separator15"></div>
-	<div class="separator50"></div>
-	<h1 class="center-content font-light">Why the hack</h1>
-	<div class="separator15"></div>
-	<p class="line-compress center-content color-muted">
-		Because it is lightweight, easy and new.
-	</p>
-	<div class="separator15"></div>
-	<div class="separator50"></div>
-	<div class="hr"></div>
+  <div class="separator15"></div>
+  <div class="separator50"></div>
+  <h1 class="center-content font-light">Why the hack</h1>
+  <div class="separator15"></div>
+  <p class="line-compress center-content color-muted">
+    Because it is lightweight, easy and new.
+  </p>
+  <div class="separator15"></div>
+  <div class="separator50"></div>
+  <div class="hr"></div>
 </div>
 <div class="line bg-lightgrey">
-	<div class="separator15"></div>
-	<div class="separator50"></div>
-	<h1 class="center-content font-light">How the hack</h1>
-	<div class="separator15"></div>
-	<p class="line-compress center-content color-muted">
-		Downloading it, installing it, trying it.
-	</p>
-	<div class="separator15"></div>
-	<div class="separator50"></div>
-	<div class="hr"></div>
+  <div class="separator15"></div>
+  <div class="separator50"></div>
+  <h1 class="center-content font-light">How the hack</h1>
+  <div class="separator15"></div>
+  <p class="line-compress center-content color-muted">
+    Downloading it, installing it, trying it.
+  </p>
+  <div class="separator15"></div>
+  <div class="separator50"></div>
+  <div class="hr"></div>
 </div>
 <div class="separator50"></div>
 <div class="line-compress">
-	<div class="col9 offset-left1 line-mobile line-tablet">
-		<div class="col4 offset-right1 color-black  line-mobile line-tablet">
-			<a ng-href="{{config.appDownloadUrl}}" class="btn btn-large bg-white color-black radius3 border center-content">
-				<i class="fa fa-cloud-download"></i>
-				Download
-			</a>
-		</div>
-		<div class="separator10 mobile tablet"></div>
-		<div class="col4 color-black line-mobile line-tablet">
-			<a  ng-href="{{config.GithubUrl}}" class="btn btn-large bg-white color-black radius3 border center-content">
-				<i class="fa fa-github-alt"></i>
-				Github  source
-			</a>
-		</div>
-	</div>
+  <div class="col9 offset-left1 line-mobile line-tablet">
+    <div class="col4 offset-right1 color-black  line-mobile line-tablet">
+      <a ng-href="{{config.appDownloadUrl}}" class="btn btn-large bg-white color-black radius3 border center-content">
+        <i class="fa fa-cloud-download"></i>
+        Download
+      </a>
+    </div>
+    <div class="separator10 mobile tablet"></div>
+    <div class="col4 color-black line-mobile line-tablet">
+      <a  ng-href="{{config.GithubUrl}}" class="btn btn-large bg-white color-black radius3 border center-content">
+        <i class="fa fa-github-alt"></i>
+        Github  source
+      </a>
+    </div>
+  </div>
+</div>
+<div class="separator50"></div>
+<div class="hr"></div>
+<div class="separator50"></div>
+<div class="line">
+  <div class="col8 offset-left1 line-mobile line-tablet">
+    <h1 class="line center-content font-light color-muted">
+      <i class="fa fa-fire"></i>
+      The project is at early stage
+    </h1>
+    <div class="separator15"></div>
+    <div class="line center-content font-light">Minor and/or radical changes may occur often.</div>
+  </div>
 </div>
 <div class="separator50"></div>
