Probably better english

--- a/assets/css/helper.css
+++ b/assets/css/helper.css
@@ -637,7 +637,7 @@
   }
 
   /****************************************
-  ** Edit this part for colors and background
+  ** Put your own theming and extra rules in here
   ** YOUR THEME RULES
   *****************************************/
   .font-custom{
