Links custom added

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,27 +1,38 @@
-.font-custom{
-  font-family: 'Roboto', sans-serif;
+  a {
+      color:#FD2941;
   }
-  .bg-red{
-  background-color:#FD2941;
-  }.color-blue{
-  color:#3F42F6;
+  a:hover {
+      color:#FD2941;
+      text-decoration: underline;
   }
-  .bg-azure{
-  background-color:#9CFEF7;
-  }
-  .bg-lightgrey{
-  background-color:#F8F8F8;
-  }.color-grey{
-  color:#666;
-  }
-  .bg-red{
-  background-color: #FD2941;
-  }.color-red{
-  color:#FD2941;
-  }
-  .bg-muted-less{
-  background-color: rgba(0,0,0,0.75);
-  }
-  .bg-grid{
-  background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJbt279zwjjgzje3t6MYAEYB8RmROaABADmuw8jmdS7KgAAAABJRU5ErkJggg==') repeat bottom right;
-  background-size: 1px;}
+ .font-custom {
+     font-family:'Roboto', sans-serif;
+ }
+ .bg-red {
+     background-color:#FD2941;
+ }
+ .color-blue {
+     color:#3F42F6;
+ }
+ .bg-azure {
+     background-color:#9CFEF7;
+ }
+ .bg-lightgrey {
+     background-color:#F8F8F8;
+ }
+ .color-grey {
+     color:#666;
+ }
+ .bg-red {
+     background-color: #FD2941;
+ }
+ .color-red {
+     color:#FD2941;
+ }
+ .bg-muted-less {
+     background-color: rgba(0, 0, 0, 0.75);
+ }
+ .bg-grid {
+     background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJbt279zwjjgzje3t6MYAEYB8RmROaABADmuw8jmdS7KgAAAABJRU5ErkJggg==') repeat bottom right;
+     background-size: 1px;
+ }
