Changing .line-compress to padding instead of margins, more comfortable

--- a/views/layout/index.html
+++ b/views/layout/index.html
@@ -10,11 +10,11 @@
 <div class="line">
   <div class="line-compress">
     <h4 class="font-light">
-      {{config.appName}} 
-      adopts a very simple grid system and logic, 
-      <small class="badge bg-lightgrey radius5"><b>.line</b></small> 
-      defines an html row, and 
-      <small class="badge bg-lightgrey radius5"><b>.col*</b></small> 
+      {{config.appName}}
+      adopts a very simple grid system and logic,
+      <small class="badge bg-lightgrey radius5"><b>.line</b></small>
+      defines an html row, and
+      <small class="badge bg-lightgrey radius5"><b>.col*</b></small>
       defines a column for the .line row
     </h4>
     <div class="separator15"></div>
@@ -23,7 +23,7 @@
         <div class="separator5"></div>
         <div class="line-compress">
           <i class="fa fa-exclamation color-red"></i>
-          {{config.appName}} does not use any fixed width, if you need to wrap a piece of your html into a fixed width element you could just create a class for it, an example could be 
+          {{config.appName}} does not use any fixed width, if you need to wrap a piece of your html into a fixed width element you could just create a class for it, an example could be
           <small class="badge bg-lightgrey radius5"><b>.col-fixed-1</b></small>  {  width:900px; }
         </div>
         <div class="separator5"></div>
@@ -82,12 +82,14 @@
     <h1 class="font-light">Compressor</h1>
     <div class="separator15"></div>
     <div>
-      A compressor <small class="badge bg-lightgrey radius5"><b>.line-compress</b></small> is a <small class="badge bg-lightgrey radius5"><b>.line</b></small>  that is compressed to fit some margins from the parent element, the default margin both on left and right sides is 2%, you can easly change it if you need a different setup
+      A compressor <small class="badge bg-lightgrey radius5"><b>.line-compress</b></small> is a <small class="badge bg-lightgrey radius5"><b>.line</b></small>  that is compressed to fit some padding from the parent element left and right edges, the default padding both on left and right sides is 2%, you can easly change it if you need a different setup
     </div>
     <div class="separator15"></div>
     <div class="line bg-red">
-      <div class="line-compress  bg-lightgrey center-content">
-        .line-compress
+      <div class="line-compress  bg-error center-content">
+      <div class="line-compress bg-lightgrey">
+         .line-compress
+      </div>
       </div>
     </div>
     <div class="separator30"></div>
