Changing .line-compress to padding instead of margins, more comfortable

--- a/src/helper.css
+++ b/src/helper.css
@@ -520,7 +520,7 @@
       clear:right;
   }
   .line-compress {
-      margin:0 2% 0 2%;
+      padding:0 2% 0 2%;
       width:96%;
       float: none;
       clear:both;
