--- a/src/helper.css
+++ b/src/helper.css
@@ -520,10 +520,14 @@
       clear:right;
   }
   .line-compress {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+      box-sizing: border-box;
+      width: 100%;
+      float: left;
+      clear:right;
       padding:0 2% 0 2%;
-      width:96%;
-      float: none;
-      clear:both;
   }
   .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .offset-left1, .offset-left2, .offset-left3, .offset-left4, .offset-left5, .offset-left6, .offset-left7, .offset-left8, .offset-left9, .offset-left10, .offset-right1, .offset-right2, .offset-right3, .offset-right4, .offset-right5, .offset-right6, .offset-right7, .offset-right8, .offset-right9, .offset-right10 {
       float: left;
