Some english check + typos fixed

--- a/views/animations/index.html
+++ b/views/animations/index.html
@@ -10,7 +10,7 @@
 <div class="line">
   <div class="line-compress">
     <h4 class="font-light">
-      {{config.appName}} 
+      {{config.appName}}
       includes some classes that can be used to animate elments togheter with some javascript code.
       <div class="separator15"></div>
       <div class="bg-lightgrey radius3">
@@ -19,7 +19,7 @@
           <div class="line-compress">
             <i class="fa fa-exclamation color-red"></i>
             {{config.appName}} <b>animation</b> classes can be easily extended .
-            Just create new keyframes rules and relative classes, actually its full of great ready-to-go css animation's helpers, all around the web,  check this <a target="_blank" href="https://daneden.github.io/animate.css/">link</a> for example.
+            You could just create new keyframes and rules with relative classes, actually its full of great ready-to-go css animation's helpers, all around the web,  check this <a target="_blank" href="https://daneden.github.io/animate.css/">link</a> for example.
           </div>
           <div class="separator5"></div>
         </h5>
