--- a/views/buttons/index.html
+++ b/views/buttons/index.html
@@ -13,7 +13,7 @@
 		<div class="separator15"></div>
 		A <small class="badge bg-lightgrey radius5"><b>.btn</b></small> class, defines a button element style .
 		<div>
-			By default buttons are 100% full width, if you need to use a different width please refer to <a href="#/layout">layout classes</a>
+			By default buttons are 100% full width, if you need to use a different width please refer to the <a href="#/layout">layout classes</a>
 		</div>
 		<div class="separator15"></div>
 		<h3 class="color-muted">Code</h3>
