--- a/views/home/index.html
+++ b/views/home/index.html
@@ -4,7 +4,7 @@
 	<h1 class="center-content font-light">What the hack</h1>
 	<div class="separator15"></div>
 	<p class=" line-compress center-content color-white">
-		{{config.appName}}  is a css helper, forget the traditional frameworks approach.
+		{{config.appName}}  is a css helper, forget the traditional framework approach.
 		<div class="center-content">
 			Each class is a task-like.
 		</div>
@@ -31,7 +31,7 @@
 	<h1 class="center-content font-light">How the hack</h1>
 	<div class="separator15"></div>
 	<p class="line-compress center-content color-muted">
-		Downloading it, installing it, trying it.
+		Download it, install it, try it.
 	</p>
 	<div class="separator15"></div>
 	<div class="separator50"></div>
