--- a/views/layout/index.html
+++ b/views/layout/index.html
@@ -23,7 +23,7 @@
         <div class="separator5"></div>
         <div class="line-compress">
           <i class="fa fa-exclamation color-red"></i>
-          {{config.appName}} does not use any fixed width, if you need to wrap a piece of your html into a fixed width element you could just create a class for it, an example could be
+          {{config.appName}} does not use any fixed width, if you need to wrap a piece of your html into a fixed width element you could just create a class for it, an example would be
           <small class="badge bg-lightgrey radius5"><b>.col-fixed-1</b></small>  {  width:900px; }
         </div>
         <div class="separator5"></div>
@@ -82,7 +82,7 @@
     <h1 class="font-light">Compressor</h1>
     <div class="separator15"></div>
     <div>
-      A compressor <small class="badge bg-lightgrey radius5"><b>.line-compress</b></small> is a <small class="badge bg-lightgrey radius5"><b>.line</b></small>  that is compressed to fit some padding from the parent element left and right edges, the default padding both on left and right sides is 2%, you can easly change it if you need a different setup
+      A compressor <small class="badge bg-lightgrey radius5"><b>.line-compress</b></small> is a <small class="badge bg-lightgrey radius5"><b>.line</b></small>  that is compressed to fit some padding from the parent element left and right edges, the default padding both on left and right sides is 2%, you can easily change it if you need a different setup
     </div>
     <div class="separator15"></div>
     <div class="line bg-red">
@@ -105,12 +105,12 @@
       </div>
       <div class="separator5"></div>
       <div class="line bg-red">
-        <div class="offset-left2 col4 bg-azure color-black">.col2 .offset-left2</div>
+        <div class="offset-left2 col4 bg-azure color-black">.col4 .offset-left2</div>
         <div class="col4 bg-lightgrey">&nbsp;</div>
       </div>
       <div class="separator5"></div>
       <div class="line bg-red">
-        <div class="offset-right4 col4 bg-azure color-black">.col4 .offset-right5</div>
+        <div class="offset-right4 col4 bg-azure color-black">.col4 .offset-right4</div>
         <div class="col2 bg-azure color-black">.col2</div>
       </div>
     </div>
