--- a/views/no/index.html
+++ b/views/no/index.html
@@ -10,8 +10,8 @@
 <div class="line">
   <div class="line-compress">
     <h4 class="font-light">
-      {{config.appName}} 
-      includes some classes that can be used to remove / reset  pre-defined rules.
+      {{config.appName}}
+      includes some classes that can be used to disable / reset  pre-defined rules.
     </h4>
     <div class="separator15"></div>
     <div class="bg-lightgrey radius3">
@@ -20,7 +20,7 @@
         <div class="line-compress">
           <i class="fa fa-exclamation color-red"></i>
           {{config.appName}}  <b>no!</b> classes can be easily extended .
-          <div> Just, for example, in case you don't need box-shadow on your element you could add a nice 
+          <div> Just, for example, in case you don't need box-shadow on your element you could add a nice
             <small class="badge bg-lightgrey radius5"><b>.no-box-shadow</b></small>  { box-shadow:none; }
           </div>
         </div>
