--- a/views/responsive/index.html
+++ b/views/responsive/index.html
@@ -10,10 +10,10 @@
 <div class="line">
   <div class="line-compress">
     <h4 class="font-light">
-      {{config.appName}} 
+      {{config.appName}}
       uses media queries to help you define classes and therefore responsive to apply rules based on the user's device.
       <div>
-      Just for example, if you want your element to appear only for <b>tablet</b> devices you just have to append 
+      Just for example, if you want your element to appear only for <b>tablet</b> devices you just have to append
       <small class="badge bg-lightgrey radius5"><b>.tablet</b></small> class to that element .
       </h4>
     <div class="separator15"></div>
@@ -23,7 +23,7 @@
         <div class="line-compress">
           <i class="fa fa-exclamation color-red"></i>
           {{config.appName}}  <b>responsive</b> classes can be easily extended .
-          <div> Just, for example, in case that  you need to have a background to change on mobile devices just add a new class to the main mobile media query that you will find in the main source file.
+          <div> Just, for example, in case that  you need to have a background to change on mobile devices,  just add a new class to the main mobile media query that you will find in the main source file.
           </div>
         </div>
         <div class="separator5"></div>
@@ -50,7 +50,7 @@
         </code>
     </div>
     <h5 class="line-compress font-light">* As you can see from the code above, {{config.appName}} defines 3 important media queries, one for <b>desktop</b>, one for <b>tablet</b> and one for <b>mobile</b> devices.
- These are quite standard responsive widths, but you can easly change the media queries rules, adding your own widths, as well as adding more media queries.
+ These are quite standard responsive widths, but you can easily change the media queries rules, adding your own widths, as well as adding more media queries.
     </h5>
     <div class="separator15"></div>
 
