--- a/views/utils/index.html
+++ b/views/utils/index.html
@@ -20,7 +20,7 @@
           <div class="line-compress">
             <i class="fa fa-exclamation color-red"></i>
             {{config.appName}}  <b>utils</b> classes can be easily extended .
-            <div> Just, for example, in case that  you need to have a border-radius only on left side of the elmeent you could create a nice
+            <div> Just, for example, in case that  you need to have a border-radius only on left side of the elment you could create a nice
               <small class="badge bg-lightgrey radius5"><b>.radius-left-3</b></small>  { border-radius:3px 0px 0px 3px; }
             </div>
           </div>
