--- a/views/home/index.html
+++ b/views/home/index.html
@@ -48,7 +48,7 @@
 		</div>
 		<div class="separator10 mobile tablet"></div>
 		<div class="col4 color-black line-mobile line-tablet">
-			<a  ng-href="{{config.GithubUrl}}" class="btn btn-large bg-white color-black radius3 border center-content">
+			<a  ng-href="{{config.appGithubUrl}}" class="btn btn-large bg-white color-black radius3 border center-content">
 				<i class="fa fa-github-alt"></i>
 				Github  source
 			</a>
