--- a/src/helper.css
+++ b/src/helper.css
@@ -1,6 +1,8 @@
   /*--- SETTINGS ---*/
   * {
       font-size:13.5px;
+      padding: 0 0 0 0;
+      margin:0 auto;
   }
   *, *:hover, *:focus, *.active {
       text-decoration: none;
