--- a/views/utils/index.html
+++ b/views/utils/index.html
@@ -330,10 +330,16 @@
         It makes element not scrollable on X axis
       </div>
       <div class="separator5"></div>
+      <h3>.over-scroll</h3>
+      <div class="separator5"></div>
+      <div class="line-compress bg-lightgrey color-muted radius3">
+        It makes element scrollable both on X and Y axis
+      </div>
+      <div class="separator5"></div>
       <h3>.over-x-scroll</h3>
       <div class="separator5"></div>
       <div class="line-compress bg-lightgrey color-muted radius3">
-        It makes element scrollable  on X  axis
+        It makes element scrollable on X axis
       </div>
       <div class="separator5"></div>
       <h3>.over-y-scroll</h3>
