Going on with components part (actually hidden work in progress)

--- a/views/modules/nav/nav.html
+++ b/views/modules/nav/nav.html
@@ -45,6 +45,13 @@
         </span>
         <span class="col7 left-content">No</span>
     </a>
+   <!-- <div class="separator15"></div>
+    <a href="#/components" class="line btn btn-medium bg-muted border radius3 color-white" ng-class="{'toggle-opacity-hover': config.appPath.indexOf('components') < 0 , 'active' : config.appPath.indexOf('components') > -1}">
+        <span class="col3">
+            <i class="fa fa-magic color-red"></i>
+        </span>
+        <span class="col7 left-content"> Components</span>
+    </a>-->
     <div class="separator15"></div>
     <a href="#/animations" class="line btn btn-medium bg-muted border radius3 color-white" ng-class="{'toggle-opacity-hover': config.appPath.indexOf('animations') < 0 , 'active' : config.appPath.indexOf('animations') > -1}">
         <span class="col3">
